Redesigned Config
multiple things but mainly moved from property files to yaml